kubernetes/apps/media/seerr/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyseerr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
            io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: sonarr
            io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: homepage
            io.kubernetes.pod.namespace: selfhosted
        - matchLabels:
            app.kubernetes.io/name: buildarr
            io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "5055"
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
            io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
            io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: jellyfin
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
    - toFQDNs:
        - matchName: api.themoviedb.org
        - matchName: api.github.com
